feat: add refresh token and access token

--- a/API_v1/appsettings.json
+++ b/API_v1/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "dev": "server=(local);database=PlatformAntiquesHandicrafts;uid=sa;pwd=12345678;TrustServerCertificate=true",
     "prod": ""
+  },
+  "Jwt": {
+    "Key": "97E1D2178237B79728423DAA63DDAE59BCD76F64D129A5299197D67761",
+    "Issuer": "PAHAuthenticationService",
+    "Audience": "PAHClientSideService",
+    "Subject": "JWTServiceAccessToken"
   }
 }
