feat: add test upload image

--- a/API_v1/appsettings.json
+++ b/API_v1/appsettings.json
@@ -15,5 +15,12 @@
     "Issuer": "PAHAuthenticationService",
     "Audience": "PAHClientSideService",
     "Subject": "JWTServiceAccessToken"
+  },
+  "Firebase": {
+    "ApiKey": "AIzaSyCypGU2REOy3xwzIIwWl-YE4tRoMa69w2o",
+    "Bucket": "pah-img-repo.appspot.com",
+    "AuthEmail": "pahapi2909@gmail.com",
+    "AuthPassword": "Test@123",
+    "AuthDomain": "PAH-Img-Repo.firebaseapp.com"
   }
 }
