--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="FirebaseAuthentication.net" Version="3.2.0" />
+    <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
 	  <Using Include="BCrypt.Net.BCrypt" Alias="BC" />
   </ItemGroup>
 
