feat: add ghn base uri

--- a/API_v1/appsettings.json
+++ b/API_v1/appsettings.json
@@ -22,5 +22,11 @@
     "AuthEmail": "pahapi2909@gmail.com",
     "AuthPassword": "Test@123",
     "AuthDomain": "PAH-Img-Repo.firebaseapp.com"
+  },
+  "API3rdParty": {
+    "GHN": {
+      "dev": "https://dev-online-gateway.ghn.vn/shiip/public-api/",
+      "prod": "https://online-gateway.ghn.vn/shiip/public-api/"
+    }
   }
 }
