update: add DI and zalopay endpoint

--- a/API_v1/appsettings.json
+++ b/API_v1/appsettings.json
@@ -27,6 +27,10 @@
     "GHN": {
       "dev": "https://dev-online-gateway.ghn.vn/shiip/public-api/",
       "prod": "https://online-gateway.ghn.vn/shiip/public-api/"
+    },
+    "Zalopay": {
+      "dev": "https://sb-openapi.zalopay.vn/v2/",
+      "prod" : ""
     }
   }
 }
