--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Hangfire" Version="1.8.5" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
 	  <Using Include="BCrypt.Net.BCrypt" Alias="BC" />
   </ItemGroup>
 
