feat: add email test controller

--- a/API_v1/appsettings.json
+++ b/API_v1/appsettings.json
@@ -30,7 +30,14 @@
     },
     "Zalopay": {
       "dev": "https://sb-openapi.zalopay.vn/v2/",
-      "prod" : ""
+      "prod": ""
     }
+  },
+  "EmailConfiguration": {
+    "From": "cosohoangbao1509@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "cosohoangbao1509@gmail.com",
+    "Password": "uzxi nmhf ntil eavj"
   }
 }
