feat: update data for GHN

--- a/API_v1/appsettings.json
+++ b/API_v1/appsettings.json
@@ -25,8 +25,15 @@
   },
   "API3rdParty": {
     "GHN": {
-      "dev": "https://dev-online-gateway.ghn.vn/shiip/public-api/",
-      "prod": "https://online-gateway.ghn.vn/shiip/public-api/"
+      "dev": {
+        "url": "https://online-gateway.ghn.vn/shiip/public-api/",
+        "defaultShippingCode": "G8GKNQVG"
+      },
+      "prod": {
+        "url": "https://online-gateway.ghn.vn/shiip/public-api/",
+        "defaultShippingCode": "G8GKNQVG"
+      },
+      "token": "d22eca64-56be-11ee-96dc-de6f804954c9"
     },
     "Zalopay": {
       "dev": "https://sb-openapi.zalopay.vn/v2/",
