update: change ghn api

--- a/API_v1/appsettings.json
+++ b/API_v1/appsettings.json
@@ -26,14 +26,15 @@
   "API3rdParty": {
     "GHN": {
       "dev": {
-        "url": "https://online-gateway.ghn.vn/shiip/public-api/",
-        "defaultShippingCode": "G8GKNQVG"
+        "url": "https://dev-online-gateway.ghn.vn/shiip/public-api/",
+        "defaultShippingCode": "G8GKNQVG",
+        "token": "ea37f355-74ab-11ee-b1d4-92b443b7a897"
       },
       "prod": {
         "url": "https://online-gateway.ghn.vn/shiip/public-api/",
-        "defaultShippingCode": "G8GKNQVG"
-      },
-      "token": "d22eca64-56be-11ee-96dc-de6f804954c9"
+        "defaultShippingCode": "G8GKNQVG",
+        "token": "d22eca64-56be-11ee-96dc-de6f804954c9"
+      }
     },
     "Zalopay": {
       "dev": "https://sb-openapi.zalopay.vn/v2/",
